@@ -1,8 +1,8 @@
 default: sysdeps
 clean: sysdeps_clean
 
-sysdeps:  sd_byteorder sd_float64 sd_int32 sd_direntry sd_int16 sd_int64 sd_uint32 sd_sd-math sd_uint16 sd_uint64 sd_float32 sd_sysinfo sd_sd-fd sd_sd-fcntl sd_sd-signal sd_sd-longlong
-sysdeps_clean:  sd_byteorder_clean sd_float64_clean sd_int32_clean sd_direntry_clean sd_int16_clean sd_int64_clean sd_uint32_clean sd_sd-math_clean sd_uint16_clean sd_uint64_clean sd_float32_clean sd_sysinfo_clean sd_sd-fd_clean sd_sd-fcntl_clean sd_sd-signal_clean sd_sd-longlong_clean
+sysdeps:  sd_byteorder sd_float64 sd_int32 sd_direntry sd_int16 sd_int64 sd_uint32 sd_sd-math sd_uint16 sd_uint64 sd_float32 sd_sysinfo sd_sd-fd sd_sd-fcntl sd_sd-signal sd_sd-longlong sd_sd-inline
+sysdeps_clean:  sd_byteorder_clean sd_float64_clean sd_int32_clean sd_direntry_clean sd_int16_clean sd_int64_clean sd_uint32_clean sd_sd-math_clean sd_uint16_clean sd_uint64_clean sd_float32_clean sd_sysinfo_clean sd_sd-fd_clean sd_sd-fcntl_clean sd_sd-signal_clean sd_sd-longlong_clean sd_sd-inline_clean
 
 sd_byteorder:
 	@(cd modules/byteorder && ./run)
@@ -83,6 +83,11 @@ sd_sd-longlong:
 	@(cd modules/sd-longlong && ./run)
 sd_sd-longlong_clean:
 	@(cd modules/sd-longlong && ./clean)
+
+sd_sd-inline:
+	@(cd modules/sd-inline && ./run)
+sd_sd-inline_clean:
+	@(cd modules/sd-inline && ./clean)
 
 regen:
 	./gen-makefile > Makefile.tmp
