@@ -1,0 +1,1 @@
+check for presence of 'inline' keyword in C compiler.
