@@ -1,0 +1,18 @@
+#!/bin/sh
+
+SYSDEP_CLEAN=1
+. ../../sysdep-main
+if [ $? -ne 0 ]
+then
+  exit 111
+fi
+
+f1_tmp="_sd_inline.h"
+sd_tmp="sysdeps.out"
+echo "SYSDEPS sd-inline clean ${f1_tmp}"
+
+f1_out="${SYSDEP_OUTDIR}/${f1_tmp}"
+sd_out="${SYSDEP_OUTDIR}/${sd_tmp}"
+
+rm -f ${f1_tmp} ${f1_out}
+rm -f ${sd_tmp} ${sd_out}
