@@ -1,0 +1,10 @@
+inline void func()
+{
+  int x;
+}
+
+int main()
+{
+  func();
+  return 0;
+}
