@@ -1,0 +1,10 @@
+#ifndef INLINE_H
+#define INLINE_H
+
+#include "_sd_inline.h"
+
+#if !defined(HAVE_INLINE)
+  #define inline
+#endif
+
+#endif
