@@ -241,3 +241,4 @@
 20070327 code: rewrite fmt_double() and fmt_float for scientific
                precision.
 20070328 code: full tests for fmt_double() and fmt_float().
+20070328 code: sysdeps update.
